--- a/public/404.html
+++ b/public/404.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunaje Bhushan's Blog</title>
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
